<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.aytweets.activities.ProfileActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileUserImageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#38bdd5"
        android:contentDescription="@string/timeline_item_user_image_description"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileNameTextView"
        android:layout_alignTop="@+id/profileUserImageView"
        android:layout_toRightOf="@+id/profileUserImageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/name_profile_hint"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileTaglineTextView"
        android:layout_below="@+id/profileNameTextView"
        android:layout_alignLeft="@+id/profileNameTextView"
        android:layout_alignStart="@+id/profileNameTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/profile_tagline_hint"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileUserImageView"
        android:layout_alignLeft="@+id/profileUserImageView"
        android:layout_alignStart="@+id/profileUserImageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileFollowersTextView"
            android:hint="@string/profile_followers_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileFollowingTextView"
            android:hint="@string/profile_following_hint"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/userTimelinePlaceholderLayout"
        android:layout_marginRight="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </FrameLayout>

</RelativeLayout>
