<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.aytweets.activities.ComposeTweetActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/tweetEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:inputType="textMultiLine"
        android:contextClickable="true"
        android:hint="@string/tweet_edit_text_hint"
        android:gravity="top" />

    <Button
        android:onClick="onTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_button_title"
        android:id="@+id/tweetButton"
        android:layout_below="@+id/tweetEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tweetCharCountTextView"
        android:layout_below="@+id/tweetEditText"
        android:layout_alignRight="@+id/tweetEditText"
        android:layout_alignEnd="@+id/tweetEditText"
        android:hint="@string/tweet_char_countdown_hint"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:gravity="end" />
</RelativeLayout>
